src/lib/schwa/formats/sgml_gen.cc

#line 1 "../ragel/formats/sgml/sgml.rl"
// vim: ft=ragel:
/* -*- Mode: C++; indent-tabs-mode: nil -*- */


#line 69 "../ragel/formats/sgml/sgml.rl"



#include <schwa/formats/sgml.h>


namespace schwa {
namespace formats {


#line 19 "schwa/formats/sgml_gen.cc"
static const int sgml_start = 154;

static const int sgml_en_main = 154;


#line 79 "../ragel/formats/sgml/sgml.rl"

void
SGMLishLexer::_init(void) {
  (void)sgml_en_main;
  
#line 31 "schwa/formats/sgml_gen.cc"
	{
	 _state.cs = sgml_start;
	 _state.ts = 0;
	 _state.te = 0;
	 _state.act = 0;
	}

#line 84 "../ragel/formats/sgml/sgml.rl"
}


SGMLishNode *
SGMLishLexer::lex(void) {
  // std::cout << "[SGMLishLexer::lex] begin p=" << static_cast<const void *>(_state.p) << " pe=" << static_cast<const void *>(_state.pe) << std::endl;
  // Don't attempt to lex if we're at EOF.
  if (_state.at_eof())
    return nullptr;
  
#line 50 "schwa/formats/sgml_gen.cc"
	{
	if ( ( _state.p) == ( _state.pe) )
		goto _test_eof;
	switch (  _state.cs )
	{
tr0:
#line 1 "NONE"
	{	switch(  _state.act ) {
	case 0:
	{{goto st0;}}
	break;
	case 4:
	{{( _state.p) = (( _state.te))-1;} _create_text_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }
	break;
	}
	}
	goto st154;
tr30:
#line 20 "../ragel/formats/sgml/sgml.rl"
	{ _tag_name_end(( _state.p)); }
#line 61 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_start_tag_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr37:
#line 61 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_start_tag_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr65:
#line 22 "../ragel/formats/sgml/sgml.rl"
	{ _create_attr(); }
#line 61 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_start_tag_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr66:
#line 62 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_empty_tag_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr154:
#line 66 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_comment_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr166:
#line 65 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_cdata_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr173:
#line 20 "../ragel/formats/sgml/sgml.rl"
	{ _tag_name_end(( _state.p)); }
#line 63 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_end_tag_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr178:
#line 63 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_end_tag_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr212:
#line 67 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p)+1;{ _create_xml_decl_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr298:
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p);( _state.p)--;{ _create_text_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr304:
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p);( _state.p)--;{ _create_text_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr310:
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p);( _state.p)--;{ _create_text_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
tr316:
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.te = ( _state.p);( _state.p)--;{ _create_text_node(); {( _state.p)++;  _state.cs = 154; goto _out;} }}
	goto st154;
st154:
#line 1 "NONE"
	{ _state.ts = 0;}
#line 1 "NONE"
	{ _state.act = 0;}
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof154;
case 154:
#line 1 "NONE"
	{ _state.ts = ( _state.p);}
#line 144 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 38u: goto tr293;
		case 60u: goto st17;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr295;
		} else if ( (*( _state.p)) >= 128u )
			goto st0;
	} else if ( (*( _state.p)) > 239u ) {
		if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto st0;
		} else if ( (*( _state.p)) >= 240u )
			goto tr297;
	} else
		goto tr296;
	goto tr292;
st0:
 _state.cs = 0;
	goto _out;
tr8:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st155;
tr292:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st155;
tr299:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st155;
tr305:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st155;
tr311:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st155;
tr317:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st155;
st155:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof155;
case 155:
#line 226 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto tr298;
		case 38u: goto tr300;
		case 60u: goto tr298;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr301;
		} else if ( (*( _state.p)) >= 128u )
			goto tr298;
	} else if ( (*( _state.p)) > 239u ) {
		if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto tr298;
		} else if ( (*( _state.p)) >= 240u )
			goto tr303;
	} else
		goto tr302;
	goto tr299;
tr293:
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st1;
tr300:
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st1;
tr306:
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st1;
tr312:
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st1;
tr318:
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st1;
st1:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof1;
case 1:
#line 279 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 35u: goto st2;
		case 65u: goto st9;
		case 71u: goto st14;
		case 76u: goto st14;
		case 81u: goto st15;
		case 97u: goto st9;
		case 103u: goto st14;
		case 108u: goto st14;
		case 113u: goto st15;
	}
	goto tr0;
st2:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof2;
case 2:
	switch( (*( _state.p)) ) {
		case 88u: goto st7;
		case 120u: goto st7;
	}
	if ( 48u <= (*( _state.p)) && (*( _state.p)) <= 57u )
		goto st3;
	goto tr0;
st3:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof3;
case 3:
	if ( (*( _state.p)) == 59u )
		goto tr7;
	if ( 48u <= (*( _state.p)) && (*( _state.p)) <= 57u )
		goto st3;
	goto tr0;
tr7:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st156;
st156:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof156;
case 156:
#line 322 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto tr304;
		case 38u: goto tr306;
		case 60u: goto tr304;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr307;
		} else if ( (*( _state.p)) >= 128u )
			goto tr304;
	} else if ( (*( _state.p)) > 239u ) {
		if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto tr304;
		} else if ( (*( _state.p)) >= 240u )
			goto tr309;
	} else
		goto tr308;
	goto tr305;
tr295:
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st4;
tr301:
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st4;
tr307:
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st4;
tr313:
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st4;
tr319:
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st4;
st4:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof4;
case 4:
#line 375 "schwa/formats/sgml_gen.cc"
	if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
		goto tr8;
	goto tr0;
tr296:
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st5;
tr302:
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st5;
tr308:
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st5;
tr314:
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st5;
tr320:
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st5;
st5:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof5;
case 5:
#line 411 "schwa/formats/sgml_gen.cc"
	if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
		goto st4;
	goto tr0;
tr297:
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st6;
tr303:
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st6;
tr309:
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st6;
tr315:
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st6;
tr321:
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st6;
st6:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof6;
case 6:
#line 447 "schwa/formats/sgml_gen.cc"
	if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
		goto st5;
	goto tr0;
st7:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof7;
case 7:
	if ( (*( _state.p)) < 65u ) {
		if ( 48u <= (*( _state.p)) && (*( _state.p)) <= 57u )
			goto st8;
	} else if ( (*( _state.p)) > 70u ) {
		if ( 97u <= (*( _state.p)) && (*( _state.p)) <= 102u )
			goto st8;
	} else
		goto st8;
	goto tr0;
st8:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof8;
case 8:
	if ( (*( _state.p)) == 59u )
		goto tr12;
	if ( (*( _state.p)) < 65u ) {
		if ( 48u <= (*( _state.p)) && (*( _state.p)) <= 57u )
			goto st8;
	} else if ( (*( _state.p)) > 70u ) {
		if ( 97u <= (*( _state.p)) && (*( _state.p)) <= 102u )
			goto st8;
	} else
		goto st8;
	goto tr0;
tr12:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st157;
st157:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof157;
case 157:
#line 489 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto tr310;
		case 38u: goto tr312;
		case 60u: goto tr310;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr313;
		} else if ( (*( _state.p)) >= 128u )
			goto tr310;
	} else if ( (*( _state.p)) > 239u ) {
		if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto tr310;
		} else if ( (*( _state.p)) >= 240u )
			goto tr315;
	} else
		goto tr314;
	goto tr311;
st9:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof9;
case 9:
	switch( (*( _state.p)) ) {
		case 77u: goto st10;
		case 80u: goto st12;
		case 109u: goto st10;
		case 112u: goto st12;
	}
	goto tr0;
st10:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof10;
case 10:
	switch( (*( _state.p)) ) {
		case 80u: goto st11;
		case 112u: goto st11;
	}
	goto tr0;
st11:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof11;
case 11:
	if ( (*( _state.p)) == 59u )
		goto tr16;
	goto tr0;
tr16:
#line 1 "NONE"
	{ _state.te = ( _state.p)+1;}
#line 64 "../ragel/formats/sgml/sgml.rl"
	{ _state.act = 4;}
	goto st158;
st158:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof158;
case 158:
#line 547 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto tr316;
		case 38u: goto tr318;
		case 60u: goto tr316;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr319;
		} else if ( (*( _state.p)) >= 128u )
			goto tr316;
	} else if ( (*( _state.p)) > 239u ) {
		if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto tr316;
		} else if ( (*( _state.p)) >= 240u )
			goto tr321;
	} else
		goto tr320;
	goto tr317;
st12:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof12;
case 12:
	switch( (*( _state.p)) ) {
		case 79u: goto st13;
		case 111u: goto st13;
	}
	goto tr0;
st13:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof13;
case 13:
	switch( (*( _state.p)) ) {
		case 83u: goto st11;
		case 115u: goto st11;
	}
	goto tr0;
st14:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof14;
case 14:
	switch( (*( _state.p)) ) {
		case 84u: goto st11;
		case 116u: goto st11;
	}
	goto tr0;
st15:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof15;
case 15:
	switch( (*( _state.p)) ) {
		case 85u: goto st16;
		case 117u: goto st16;
	}
	goto tr0;
st16:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof16;
case 16:
	switch( (*( _state.p)) ) {
		case 79u: goto st14;
		case 111u: goto st14;
	}
	goto tr0;
st17:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof17;
case 17:
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 13u: goto st0;
		case 32u: goto st0;
		case 33u: goto st73;
		case 38u: goto st0;
		case 47u: goto st93;
		case 63u: goto st99;
	}
	if ( (*( _state.p)) < 192u ) {
		if ( (*( _state.p)) < 60u ) {
			if ( 9u <= (*( _state.p)) && (*( _state.p)) <= 10u )
				goto st0;
		} else if ( (*( _state.p)) > 62u ) {
			if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
				goto st0;
		} else
			goto st0;
	} else if ( (*( _state.p)) > 223u ) {
		if ( (*( _state.p)) < 240u ) {
			if ( 224u <= (*( _state.p)) && (*( _state.p)) <= 239u )
				goto tr25;
		} else if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto st0;
		} else
			goto tr26;
	} else
		goto tr24;
	goto tr19;
tr19:
#line 19 "../ragel/formats/sgml/sgml.rl"
	{ _tag_name_start(( _state.p)); }
	goto st18;
st18:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof18;
case 18:
#line 655 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 13u: goto tr28;
		case 32u: goto tr28;
		case 33u: goto st0;
		case 38u: goto st0;
		case 47u: goto tr29;
		case 62u: goto tr30;
	}
	if ( (*( _state.p)) < 192u ) {
		if ( (*( _state.p)) < 60u ) {
			if ( 9u <= (*( _state.p)) && (*( _state.p)) <= 10u )
				goto tr28;
		} else if ( (*( _state.p)) > 63u ) {
			if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
				goto st0;
		} else
			goto st0;
	} else if ( (*( _state.p)) > 223u ) {
		if ( (*( _state.p)) < 240u ) {
			if ( 224u <= (*( _state.p)) && (*( _state.p)) <= 239u )
				goto st71;
		} else if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto st0;
		} else
			goto st72;
	} else
		goto st70;
	goto st18;
tr28:
#line 20 "../ragel/formats/sgml/sgml.rl"
	{ _tag_name_end(( _state.p)); }
	goto st19;
tr63:
#line 22 "../ragel/formats/sgml/sgml.rl"
	{ _create_attr(); }
	goto st19;
st19:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof19;
case 19:
#line 698 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 13u: goto st19;
		case 32u: goto st19;
		case 33u: goto st0;
		case 38u: goto st0;
		case 47u: goto st26;
		case 62u: goto tr37;
	}
	if ( (*( _state.p)) < 192u ) {
		if ( (*( _state.p)) < 60u ) {
			if ( 9u <= (*( _state.p)) && (*( _state.p)) <= 10u )
				goto st19;
		} else if ( (*( _state.p)) > 63u ) {
			if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
				goto st0;
		} else
			goto st0;
	} else if ( (*( _state.p)) > 223u ) {
		if ( (*( _state.p)) < 240u ) {
			if ( 224u <= (*( _state.p)) && (*( _state.p)) <= 239u )
				goto tr39;
		} else if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto st0;
		} else
			goto tr40;
	} else
		goto tr38;
	goto tr34;
tr34:
#line 12 "../ragel/formats/sgml/sgml.rl"
	{ _attr_name_start(( _state.p)); }
	goto st20;
st20:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof20;
case 20:
#line 737 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 13u: goto tr42;
		case 32u: goto tr42;
		case 33u: goto st0;
		case 38u: goto st0;
		case 47u: goto st0;
		case 61u: goto tr43;
	}
	if ( (*( _state.p)) < 192u ) {
		if ( (*( _state.p)) < 60u ) {
			if ( 9u <= (*( _state.p)) && (*( _state.p)) <= 10u )
				goto tr42;
		} else if ( (*( _state.p)) > 63u ) {
			if ( 128u <= (*( _state.p)) && (*( _state.p)) <= 191u )
				goto st0;
		} else
			goto st0;
	} else if ( (*( _state.p)) > 223u ) {
		if ( (*( _state.p)) < 240u ) {
			if ( 224u <= (*( _state.p)) && (*( _state.p)) <= 239u )
				goto st68;
		} else if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto st0;
		} else
			goto st69;
	} else
		goto st67;
	goto st20;
tr42:
#line 13 "../ragel/formats/sgml/sgml.rl"
	{ _attr_name_end(( _state.p)); }
	goto st21;
st21:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof21;
case 21:
#line 776 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 13u: goto st21;
		case 32u: goto st21;
		case 61u: goto st22;
	}
	if ( 9u <= (*( _state.p)) && (*( _state.p)) <= 10u )
		goto st21;
	goto st0;
tr43:
#line 13 "../ragel/formats/sgml/sgml.rl"
	{ _attr_name_end(( _state.p)); }
	goto st22;
st22:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof22;
case 22:
#line 793 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 13u: goto st22;
		case 32u: goto st22;
		case 34u: goto st23;
		case 39u: goto st46;
	}
	if ( 9u <= (*( _state.p)) && (*( _state.p)) <= 10u )
		goto st22;
	goto st0;
st23:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof23;
case 23:
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 34u: goto st25;
		case 38u: goto tr53;
		case 60u: goto st0;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr54;
		} else if ( (*( _state.p)) >= 128u )
			goto st0;
	} else if ( (*( _state.p)) > 239u ) {
		if ( (*( _state.p)) > 247u ) {
			if ( 248u <= (*( _state.p)) )
				goto st0;
		} else if ( (*( _state.p)) >= 240u )
			goto tr56;
	} else
		goto tr55;
	goto tr51;
tr51:
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st24;
tr57:
#line 15 "../ragel/formats/sgml/sgml.rl"
	{ _character_end(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st24;
tr74:
#line 16 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_decimal(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st24;
tr85:
#line 17 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_hex(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st24;
tr95:
#line 18 "../ragel/formats/sgml/sgml.rl"
	{ _character_reference_named(( _state.p)); }
#line 14 "../ragel/formats/sgml/sgml.rl"
	{ _character_start(( _state.p)); }
	goto st24;
st24:
	if ( ++( _state.p) == ( _state.pe) )
		goto _test_eof24;
case 24:
#line 860 "schwa/formats/sgml_gen.cc"
	switch( (*( _state.p)) ) {
		case 0u: goto st0;
		case 34u: goto tr58;
		case 38u: goto tr59;
		case 60u: goto st0;
	}
	if ( (*( _state.p)) < 224u ) {
		if ( (*( _state.p)) > 191u ) {
			if ( 192u <= (*( _state.p)) && (*( _state.p)) <= 223u )
				goto tr60;
